lib/src/compiler/tests/testdata/errors/75.out
error[E001]: syntax error
 --> line:1:8
  |
1 | global global rule test { condition: true }
  |        ^ expected `private` or `rule`
  |